--- a/Dipbrow pomade.html
+++ b/Dipbrow pomade.html
@@ -4,6 +4,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="menu">
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact Us</a>
+        </div>
+        
         <h2>Anastasia Beverly Hills Dipbrow Pomade</h2>
         <div class="gallery">
         <a href="index.html"><img src="images/dipbrow%20pomade.jfif"></a>
@@ -18,5 +24,7 @@
         <p><b>Users: 100%</b></p>
         <p><b>Rates: 4.5 stars</b></p>
         <p><b>Anastasia Beverly Hills DIPBROW® Pomade is a full-pigment, waterproof eyebrow pomade available in 11 shades to help fill in and detail eyebrows. The long-lasting, buildable formula glides on smoothly to skin and hair and allows time for blending before drying down completely to a matte finish.</b></p>
+        <br/>
+        <input type="submit" value="Buy"/>
     </body>
 </html>
