--- a/Estee lauder.html
+++ b/Estee lauder.html
@@ -4,6 +4,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="menu">
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact Us</a>
+        </div>
+        
         <h2>Estee Lauder Double Wear Stay-In-Place Makeup</h2>
         <div class="gallery">
         <a href="index.html"><img src="images/estee%20lauder.jfif"></a>
@@ -18,5 +24,7 @@
         <p><b>Users: 80%</b></p>
         <p><b>Rates: 4.5 stars</b></p>
         <p><b>Over 55 shades. 24-hour staying power. Our #1 foundation worldwide. Wear confidence. Double Wear Makeup is flawless whatever comes your way. 24-hour wear. Fresh matte. Oil-free. Controls oil all day. Sweat-, heat- and humidity-resistant. Waterproof. Life-proof.</b></p>
+         <br/>
+        <input type="submit" value="Buy"/>
     </body>
 </html>
