--- a/Mac lipstick.html
+++ b/Mac lipstick.html
@@ -4,6 +4,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="menu">
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact Us</a>
+        </div>
+        
         <h2>Mac Lipstick in Velvet Teddy</h2>
         <div class="gallery">
         <a href="index.html"><img src="images/mac%20lipstick.jfif"></a>
@@ -18,5 +24,7 @@
         <p><b>Users: 100%</b></p>
         <p><b>Rates: 4.5 stars</b></p>
         <p><b>MAC Velvet Teddy comes in a typical MAC shiney black bullet with very tiny golden shimmer print,the texture of MAC Velvet Teddy is soft and creamy.</b></p>
+         <br/>
+        <input type="submit" value="Buy"/>
     </body>
 </html>
