--- a/Maybelline day liner.html
+++ b/Maybelline day liner.html
@@ -4,6 +4,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="menu">
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact Us</a>
+        </div>
+        
         <h2>Maybelline Hyper Precise All Day Liner in Matte Black</h2>
         <div class="gallery">
         <a href="index.html"><img src="images/maybelline%20day%20liner4.jfif"></a>
@@ -18,5 +24,7 @@
         <p><b>Users: 80%</b></p>
         <p><b>Rates: 4.5 stars</b></p>
         <p><b>This high-impact matte black eyeliner features an ultra-thin 0.4mm brush and an ergonomic easy-control grip. The 24 hr long-wear formula is waterproof to keep your eye look on point all day long without fading or smudging.</b></p>
+         <br/>
+        <input type="submit" value="Buy"/>
     </body>
 </html>
