--- a/Laura loose powder.html
+++ b/Laura loose powder.html
@@ -4,6 +4,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="menu">
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact Us</a>
+        </div>
+        
         <h2>Laura Mercier Translucent Loose Setting Powder</h2>
         <div class="gallery">
         <a href="index.html"><img src="images/laura%20mercier2.jpg"></a>
@@ -17,5 +23,7 @@
         <p><b>Users: 80%</b></p>
         <p><b>Rates: 4.5 stars</b></p>
         <p><b>Translucent Loose Setting Powder is perfectly formulated to have a no-flashback and matching tone formula, so you have a perfect and soft-focus complexion, even on camera. Find your matching setting powder with Laura Mercier's shade finder. Discover all other Laura Mercier's setting powder products for all-over face application, lips, and eyes, including bundles and sets with makeup tools.</b></p>
+         <br/>
+        <input type="submit" value="Buy"/>
     </body>
 </html>
