--- a/index.form.html
+++ b/index.form.html
@@ -6,21 +6,21 @@
     <body>
         <form>
         <label for="firstname">Firstname : </label><input type="text" id="firstname"/><label for="firstname"></label>
-        <br><br>
+        <br/><br/>
         <label for="lastname">Lastname : </label>
         <input type="text" id="lastname"/>
-        <br><br>
+        <br/><br/>
         <label for="email">Email : </label>
         <input type="text" id="email"/>
-        <br><br>
+        <br/><br/>
         <label for="comments">Comments : </label>
         <input type="text" id="comments"/>
-        <br><br>
+        <br/><br/>
         <label for="messages">Messages : </label>
-        <input type="text" id="messages"/>
-        <br><br>
+        <input type="text" id="message"/>
+        <br/><br/>
+        <input type="submit" value="Buy"/>
         <input type="submit" value="Submit"/>
-        <input type="reset" value="Reset"/>
         </form>
     </body>
 </html>
